Fix spacing on contact form and add loading feedback for send button

--- a/src/style/pages/contactform.scss
+++ b/src/style/pages/contactform.scss
@@ -1,12 +1,11 @@
 #contact-form {
   background-image: linear-gradient(135deg, $primary-color 0%, $secondary-color 100%);
-  padding: 10rem 0 10rem 0;
   margin-bottom: -1px;
   color: $white-color;
-  height: 75.4vh;
+  min-height: 75.4vh;
 
   .contact-form-title {
-    margin-top:  10vh;
+    margin-top:  5vh;
     margin-bottom: 2vh;
     font-size: 3.6rem;
     text-transform: uppercase;
